--- a/Kudu 5.10.59 AM/Kudu/Utilties/Helper Classes/HorizontallyExpandableCollection/HorizontallyExpandableCollection.xib
+++ b/Kudu 5.10.59 AM/Kudu/Utilties/Helper Classes/HorizontallyExpandableCollection/HorizontallyExpandableCollection.xib
@@ -31,6 +31,11 @@
                             </constraints>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="k_allergenCollection_showShort"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageDirection">
+                                    <integer key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="collapseCollectionPressed:" destination="-1" eventType="touchUpInside" id="SKk-13-MuB"/>
                             </connections>
@@ -55,6 +60,11 @@
                             </constraints>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="k_allergenCollection_showLong"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="imageDirection">
+                                    <integer key="value" value="1"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="expandCollectionPressed:" destination="-1" eventType="touchUpInside" id="Vft-Io-DsW"/>
                             </connections>
