--- a/Kudu 5.10.59 AM/Kudu/Utilties/App Utilities/LocationServicesDeniedView/LocationServicesDeniedView.xib
+++ b/Kudu 5.10.59 AM/Kudu/Utilties/App Utilities/LocationServicesDeniedView/LocationServicesDeniedView.xib
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -42,67 +44,71 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Service Off" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bWc-8U-bQw">
-                    <rect key="frame" x="134.5" y="179.5" width="145" height="19"/>
+                    <rect key="frame" x="130" y="179.5" width="154" height="20.5"/>
                     <fontDescription key="fontDescription" name="Mulish-Bold" family="Mulish" pointSize="16"/>
                     <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Turn On Location Services to allow KUDU to  determine  your  Current location." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w2-i7-BCf">
-                    <rect key="frame" x="52" y="210.5" width="310" height="28"/>
+                    <rect key="frame" x="52" y="212" width="310" height="30.5"/>
                     <fontDescription key="fontDescription" name="Mulish-Medium" family="Mulish" pointSize="12"/>
                     <color key="textColor" white="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5k-F2-2gF" customClass="AppButton" customModule="Kudu" customModuleProvider="target">
-                    <rect key="frame" x="87.5" y="257.5" width="106" height="40"/>
-                    <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="aaz-eh-86m">
+                    <rect key="frame" x="87.5" y="261.5" width="239" height="40"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5k-F2-2gF" customClass="AppButton" customModule="Kudu" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="106" height="40"/>
+                            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="106" id="y6i-nb-eiO"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Mulish-Bold" family="Mulish" pointSize="14"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.35686274509999999" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8G-PW-OsG" customClass="AppButton" customModule="Kudu" customModuleProvider="target">
+                            <rect key="frame" x="133" y="0.0" width="106" height="40"/>
+                            <color key="backgroundColor" red="0.96078431369999995" green="0.69803921570000005" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="zN9-OT-a3W"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Mulish-Bold" family="Mulish" pointSize="14"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                    <real key="value" value="4"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="width" constant="106" id="y6i-nb-eiO"/>
+                        <constraint firstAttribute="height" constant="40" id="n9C-Bc-CBk"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Mulish-Bold" family="Mulish" pointSize="14"/>
-                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <state key="normal">
-                        <color key="titleColor" red="0.35686274509999999" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
-                    </state>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N8G-PW-OsG" customClass="AppButton" customModule="Kudu" customModuleProvider="target">
-                    <rect key="frame" x="220.5" y="257.5" width="106" height="40"/>
-                    <color key="backgroundColor" red="0.96078431369999995" green="0.69803921570000005" blue="0.1058823529" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="zN9-OT-a3W"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" name="Mulish-Bold" family="Mulish" pointSize="14"/>
-                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="4"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </button>
+                </stackView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="bWc-8U-bQw" firstAttribute="top" secondItem="apm-bw-txI" secondAttribute="bottom" constant="28.629999999999999" id="3Ju-2g-7pI"/>
+                <constraint firstItem="aaz-eh-86m" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="8Y4-t5-Ee1"/>
                 <constraint firstItem="7w2-i7-BCf" firstAttribute="centerX" secondItem="bWc-8U-bQw" secondAttribute="centerX" id="9I0-qs-LRL"/>
                 <constraint firstItem="7w2-i7-BCf" firstAttribute="top" secondItem="bWc-8U-bQw" secondAttribute="bottom" constant="12" id="Dxn-c8-vpz"/>
-                <constraint firstItem="O5k-F2-2gF" firstAttribute="top" secondItem="7w2-i7-BCf" secondAttribute="bottom" constant="19" id="FLM-UM-h90"/>
                 <constraint firstItem="7w2-i7-BCf" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="52" id="GH9-EL-HVe"/>
                 <constraint firstItem="bWc-8U-bQw" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UQ4-P5-124"/>
                 <constraint firstItem="UmL-FJ-853" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="bGZ-jM-SKB"/>
                 <constraint firstItem="apm-bw-txI" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="cOY-d1-PgR"/>
-                <constraint firstItem="N8G-PW-OsG" firstAttribute="centerY" secondItem="O5k-F2-2gF" secondAttribute="centerY" id="fvt-bb-ClU"/>
-                <constraint firstItem="O5k-F2-2gF" firstAttribute="width" secondItem="N8G-PW-OsG" secondAttribute="width" id="h6Z-8G-h6m"/>
+                <constraint firstItem="aaz-eh-86m" firstAttribute="top" secondItem="7w2-i7-BCf" secondAttribute="bottom" constant="19" id="gjt-zI-lMN"/>
                 <constraint firstItem="apm-bw-txI" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="21" id="hHf-0F-Uqx"/>
                 <constraint firstAttribute="trailing" secondItem="7w2-i7-BCf" secondAttribute="trailing" constant="52" id="mSj-Kv-C60"/>
-                <constraint firstItem="O5k-F2-2gF" firstAttribute="height" secondItem="N8G-PW-OsG" secondAttribute="height" id="o8a-Ug-trH"/>
-                <constraint firstItem="O5k-F2-2gF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="-66.5" id="oPn-ty-xlq"/>
-                <constraint firstItem="N8G-PW-OsG" firstAttribute="leading" secondItem="O5k-F2-2gF" secondAttribute="trailing" constant="27" id="ocb-RE-owx"/>
                 <constraint firstItem="UmL-FJ-853" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="pfJ-G2-8Vr"/>
                 <constraint firstAttribute="trailing" secondItem="UmL-FJ-853" secondAttribute="trailing" id="z1F-Tg-a1A"/>
             </constraints>
@@ -115,9 +121,17 @@
             <point key="canvasLocation" x="132" y="130"/>
         </view>
     </objects>
+    <designables>
+        <designable name="N8G-PW-OsG">
+            <size key="intrinsicContentSize" width="30" height="30"/>
+        </designable>
+        <designable name="O5k-F2-2gF">
+            <size key="intrinsicContentSize" width="30" height="30"/>
+        </designable>
+    </designables>
     <resources>
-        <image name="k_myaddress_alertBg" width="354" height="183.33332824707031"/>
-        <image name="k_myaddress_locationServices" width="138" height="133.66667175292969"/>
+        <image name="k_myaddress_alertBg" width="354" height="183"/>
+        <image name="k_myaddress_locationServices" width="138" height="133.5"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
